--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Henry Letting
 description: Software Developer from Nairobi
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://lh5.googleusercontent.com/EfYV0vvoqWIk_StcHhIBEQtdxN1lBbhBm0-1Dlwv23joeXM4Y17DoZ_A53itBK5ykPuYWA=w1272-h535
 
 #
 # Flags below are optional
@@ -18,18 +18,18 @@ avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/je
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:lettinghenry0@gmail.com
-  facebook:henry.letting.5
+  email: lettinghenry0@gmail.com
+  facebook: henry.letting.5
   flickr:
   github: github.com/lettinghenry
   instagram:henryletting
-  linkedin:lettinghenry
+  linkedin: lettinghenry
   pinterest:
   rss:HL # just type anything here for a working RSS icon
   twitter: @lettinghenry
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
-  googleplus:lettinghenry0 # anything in your profile username that comes after plus.google.com/
+  googleplus: lettinghenry0 # anything in your profile username that comes after plus.google.com/
 
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
